--- a/ingles.html
+++ b/ingles.html
@@ -15,7 +15,7 @@
     <div class="container">
         <a href="index.html" class="boton">Ingles</a>
         <h1>Restaurant español</h1>
-        <form>
+        <form action="https://formsubmit.co/61d6298d565106c8365ad6d428102992" method="POST">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
 
@@ -73,6 +73,6 @@
     </footer>
 
     <script src="java.js"></script>
-    <script src="scrip.js"></script>
+    <script src="scri9p.js"></script>
 </body>
 </html>
