--- a/ingles.html
+++ b/ingles.html
@@ -15,7 +15,7 @@
     <div class="container">
         <a href="index.html" class="boton">Ingles</a>
         <h1>Restaurant español</h1>
-        <form action="https://formsubmit.co/61d6298d565106c8365ad6d428102992" method="POST">
+        <form action="https://formsubmit.co/digitalcommunity3@gmail.com" method="POST">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
 
