--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <a href="ingles.html" class="boton">Ingles</a>
         <h1>Restaurant español</h1>
-        <form>
+        <form action="https://formsubmit.co/digitalcommunity3@gmail.com" method="POST">
             <label for="name">Nombre:</label>
             <input type="text" id="name" name="name" required>
 
